# Project-Titan

./: .gitignore  AGENTS.md  CODE_REVIEW.md  README.md  SECURITY_GUIDE_ANALYSIS.md  SURVIVAL_ANALYSIS.md  pyproject.toml  requirements.txt
assets/: GMS_REPORT.md  SECURITY_AUDIT.md  index.html
assets/templates/: routeros_survival.j2  routeros_v7_base.j2  scenario_branch.j2  scenario_wisp.j2  security_hardening.j2
src/: main.py
src/discovery/: mndp_scanner.py
src/logic/: auditor.py  deployer.py  generator.py  hardware_validator.py  telemetry.py
src/ui/: monitor.py  wizard.py
tests/: test_discovery.py  test_e2e.py  test_generator.py  test_gms_harness.py  test_hardware_validator.py  test_ui_integrity.py
tools/: build.py
